--- a/css/15-16-lsyw.css
+++ b/css/15-16-lsyw.css
@@ -1,7 +1,7 @@
 .version._15_16_lsyw /* version checker */
 {
-	color: #00001D;
-	background-color: #2D5BC7;
+	color: #0000E2;
+	background-color: #99E504;
 }
 
 .html
@@ -13,11 +13,12 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 500px;
+	min-height: 499.9999999999999px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -25,7 +26,7 @@
 #page_position_content
 {
 	margin-top: -36px;
-	padding-bottom: 29px;
+	padding-bottom: 177px;
 	width: 0.01px;
 }
 
@@ -299,8 +300,8 @@
 	text-align: left;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
-	margin-left: 186px;
-	margin-top: 336px;
+	margin-left: 20px;
+	margin-top: 188px;
 	position: relative;
 }
 
