--- a/css/pumpkin.css
+++ b/css/pumpkin.css
@@ -1,7 +1,7 @@
-.version.winter_guard /* version checker */
+.version.pumpkin /* version checker */
 {
-	color: #0000EA;
-	background-color: #0B4118;
+	color: #00000D;
+	background-color: #A49221;
 }
 
 .html
@@ -13,12 +13,11 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 499.3071428571427px;
+	min-height: 3184px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 1px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -26,7 +25,7 @@
 #page_position_content
 {
 	margin-top: -36px;
-	padding-bottom: 157px;
+	padding-bottom: 443px;
 	width: 0.01px;
 }
 
@@ -289,266 +288,205 @@
 	min-height: 56px;
 }
 
-#menuu4055
+#u2258-4
 {
 	z-index: 29;
-	width: 664px;
-	border-style: none;
-	border-color: transparent;
+	min-height: 45px;
 	background-color: transparent;
-	margin-left: 148px;
-	margin-top: 59px;
-	position: relative;
-}
-
-#u4063
-{
-	width: 220px;
-	min-height: 221px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u4066
-{
-	width: 220px;
-	background-color: #9E9E9E;
-	background-color: rgba(0,0,0,0.38);
-	padding-bottom: 199px;
-	position: relative;
-	-pie-background: rgba(0,0,0,0.38);
-}
-
-#u4066:hover
-{
-	background-color: #4F4F4F;
-	background-color: rgba(0,0,0,0.69);
-	width: 220px;
-	min-height: 0px;
-	margin: 0px;
-	-pie-background: rgba(0,0,0,0.69);
-}
-
-#u4066:active
-{
-	background-color: #000000;
-	background-color: rgba(0,0,0,1);
-	width: 220px;
-	min-height: 0px;
-	margin: 0px;
-	-pie-background: rgba(0,0,0,1);
-}
-
-#u4068-4
-{
-	width: 220px;
-	min-height: 22px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	line-height: 22px;
-	color: #FFFFFF;
-	font-size: 18px;
+	line-height: 58px;
+	font-size: 48px;
 	text-align: center;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
-	position: relative;
-	margin-right: -10000px;
-	top: 99px;
 }
 
-#u4066:hover #u4068-4
+#u2258
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 22px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
 }
 
-#u4066:active #u4068-4
+#u2258-4-bw
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 22px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
+	z-index: 29;
+	min-height: 45px;
+	margin-top: 29px;
 }
 
-#u4070
+#u2262-4
 {
-	width: 220px;
-	min-height: 221px;
+	z-index: 38;
+	min-height: 45px;
 	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 222px;
-}
-
-#u4073
-{
-	width: 220px;
-	background-color: #9E9E9E;
-	background-color: rgba(0,0,0,0.38);
-	padding-bottom: 199px;
-	position: relative;
-	-pie-background: rgba(0,0,0,0.38);
-}
-
-#u4073:hover
-{
-	background-color: #4F4F4F;
-	background-color: rgba(0,0,0,0.69);
-	width: 220px;
-	min-height: 0px;
-	margin: 0px;
-	-pie-background: rgba(0,0,0,0.69);
-}
-
-#u4073:active
-{
-	background-color: #000000;
-	background-color: rgba(0,0,0,1);
-	width: 220px;
-	min-height: 0px;
-	margin: 0px;
-	-pie-background: rgba(0,0,0,1);
-}
-
-#u4074-4
-{
-	width: 220px;
-	min-height: 22px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	line-height: 22px;
-	color: #FFFFFF;
-	font-size: 18px;
+	line-height: 44px;
+	font-size: 37px;
 	text-align: center;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
-	position: relative;
-	margin-right: -10000px;
-	top: 99px;
 }
 
-#u4066.MuseMenuActive #u4068-4,#u4073:hover #u4074-4
+#u2262-4-bw
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 22px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
+	z-index: 38;
+	min-height: 45px;
+	margin-top: 10px;
 }
 
-#u4073:active #u4074-4
+#u2259
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 22px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4073.MuseMenuActive #u4074-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 22px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4056
-{
-	width: 220px;
-	min-height: 221px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 444px;
-}
-
-#u4059
-{
-	width: 220px;
-	background-color: #9E9E9E;
-	background-color: rgba(0,0,0,0.38);
-	padding-bottom: 177px;
-	position: relative;
-	-pie-background: rgba(0,0,0,0.38);
-}
-
-#u4059:hover
-{
-	background-color: #4F4F4F;
-	background-color: rgba(0,0,0,0.69);
-	width: 220px;
-	min-height: 0px;
-	margin: 0px;
-	-pie-background: rgba(0,0,0,0.69);
-}
-
-#u4059:active
-{
-	background-color: #000000;
-	background-color: rgba(0,0,0,1);
-	width: 220px;
-	min-height: 0px;
-	margin: 0px;
-	-pie-background: rgba(0,0,0,1);
-}
-
-#u4062-6
-{
-	width: 220px;
-	min-height: 44px;
+	z-index: 33;
+	width: 920px;
+	min-height: 518px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 22px;
-	color: #FFFFFF;
-	font-size: 18px;
+	margin-left: 20px;
+	margin-top: 25px;
+	position: relative;
+}
+
+#u2261-4
+{
+	z-index: 34;
+	min-height: 27px;
+	background-color: transparent;
+	line-height: 26px;
+	font-size: 22px;
 	text-align: center;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
+}
+
+#u2261-4-bw
+{
+	z-index: 34;
+	min-height: 27px;
+	margin-top: 19px;
+}
+
+#u2263-7
+{
+	z-index: 42;
+	width: 920px;
+	min-height: 73px;
+	background-color: transparent;
+	line-height: 24px;
+	font-size: 20px;
+	text-align: left;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+	margin-left: 20px;
+	margin-top: 17px;
 	position: relative;
-	margin-right: -10000px;
-	top: 88px;
 }
 
-#u4059:hover #u4062-6
+#u2267-4
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 44px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
+	z-index: 49;
+	min-height: 45px;
+	background-color: transparent;
+	line-height: 44px;
+	font-size: 37px;
+	text-align: center;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
 }
 
-#u4059:active #u4062-6
+#u2267-4-bw
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 44px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
+	z-index: 49;
+	min-height: 45px;
+	margin-top: 17px;
 }
 
-#u4059.MuseMenuActive #u4062-6
+#u2268
 {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 44px;
-	width: 220px;
-	margin: 0px -10000px 0px 0px;
+	z-index: 53;
+	width: 920px;
+	min-height: 518px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	margin-left: 20px;
+	margin-top: 17px;
+	position: relative;
 }
 
-.MenuItem /* unifiedNavBar */
+#u2270-4
 {
-	cursor: pointer;
+	z-index: 54;
+	width: 920px;
+	min-height: 56px;
+	background-color: transparent;
+	line-height: 24px;
+	font-size: 20px;
+	text-align: left;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+	margin-left: 20px;
+	margin-top: 17px;
+	position: relative;
+}
+
+#u2284-4
+{
+	z-index: 58;
+	min-height: 45px;
+	background-color: transparent;
+	line-height: 44px;
+	font-size: 37px;
+	text-align: center;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+}
+
+#u2284-4-bw
+{
+	z-index: 58;
+	min-height: 45px;
+	margin-top: 17px;
+}
+
+#u2285-4
+{
+	z-index: 62;
+	width: 920px;
+	min-height: 56px;
+	background-color: transparent;
+	line-height: 24px;
+	font-size: 20px;
+	text-align: left;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+	margin-left: 20px;
+	margin-top: 17px;
+	position: relative;
+}
+
+#u2286
+{
+	z-index: 66;
+	width: 920px;
+	background-color: transparent;
+	margin-left: 20px;
+	margin-top: 17px;
+	position: relative;
+}
+
+#u2292-4
+{
+	z-index: 68;
+	width: 920px;
+	min-height: 56px;
+	background-color: transparent;
+	line-height: 24px;
+	font-size: 20px;
+	text-align: left;
+	font-family: open-sans-condensed, sans-serif;
+	font-weight: 700;
+	margin-left: 20px;
+	margin-top: 17px;
+	position: relative;
 }
 
 body
@@ -556,6 +494,7 @@ body
 	position: relative;
 	min-width: 960px;
 	padding-top: 36px;
+	padding-bottom: 99px;
 }
 
 #page .verticalspacer
