--- a/css/technical.css
+++ b/css/technical.css
@@ -1,7 +1,7 @@
 .version.technical /* version checker */
 {
-	color: #0000FF;
-	background-color: #7B12AF;
+	color: #0000E3;
+	background-color: #35D0C0;
 }
 
 .html
@@ -304,7 +304,7 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 1px;
-	background: transparent url("../images/10407893_10200387133157793_1545247293051927714_n.jpg") no-repeat center center;
+	background: transparent url("../images/10407893_10200387133157793_1545247293051927714_n-u1979-fr.jpg") no-repeat center center;
 	background-size: cover;
 }
 
@@ -327,7 +327,7 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 222px;
-	background: transparent url("../images/img_9394.jpg") no-repeat center center;
+	background: transparent url("../images/img_9394-u1965-fr.jpg") no-repeat center center;
 	background-size: cover;
 }
 
