--- a/css/16-17-marching.css
+++ b/css/16-17-marching.css
@@ -1,7 +1,7 @@
 .version._16_17_marching /* version checker */
 {
-	color: #0000E9;
-	background-color: #C0331D;
+	color: #000007;
+	background-color: #84938A;
 }
 
 .html
@@ -13,11 +13,12 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 500px;
+	min-height: 499.9999999999999px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -333,7 +334,7 @@
 
 #u3025
 {
-	z-index: 37;
+	z-index: 41;
 	width: 920px;
 	min-height: 518px;
 	border-style: none;
@@ -344,29 +345,20 @@
 	position: relative;
 }
 
-#u4167-21
+#u3024-4
 {
-	z-index: 38;
-	width: 920px;
-	min-height: 73px;
+	z-index: 37;
+	width: 213px;
+	min-height: 38px;
 	background-color: transparent;
-	line-height: 24px;
-	font-size: 20px;
+	line-height: 22px;
+	font-size: 18px;
+	text-align: center;
 	font-family: open-sans-condensed, sans-serif;
 	font-weight: 700;
-	margin-left: 20px;
-	margin-top: 36px;
+	margin-left: 380px;
+	margin-top: 20px;
 	position: relative;
-}
-
-#u4167-2,#u4167-3
-{
-	text-align: left;
-}
-
-#u4167-5,#u4167-7,#u4167-9,#u4167-11,#u4167-13,#u4167-14,#u4167-18,#u4167-19
-{
-	text-align: center;
 }
 
 body
